<resources>
    <string name="app_name">1st Activity</string>

    <string name="title_welcome_back">Welcome Back</string>
    <string name="subtitle_login">Sign in with your username and password to access your account.</string>
    <string name="label_username">Username</string>
    <string name="hint_username">Enter your username</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="no_account">Don\'t have an account?</string>

    <string name="title_create_account">Create your account</string>
    <string name="subtitle_sign_up">Fill in your email and password to create your account and get started.</string>
    <string name="label_email">Email Address</string>
    <string name="hint_email">Enter your email</string>
    <string name="label_confirm_email">Confirm Email Address</string>
    <string name="hint_confirm_email">Re-enter your email</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="hint_confirm_password">Re-enter your password</string>
    <string name="agree_terms">I agree to the Terms &amp; Privacy Policy</string>
    <string name="have_account">Already have an account?</string>
    <string name="desc_back">Go back</string>

    <string name="label_password">Password</string>
    <string name="hint_password">Enter your password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="signing_in">Signing in…</string>
    <string name="error_empty_fields">Please enter your username and password.</string>
    <string name="error_connection">Could not connect to the server. Check your internet and try again.</string>

    <!-- OTP screen -->
    <string name="title_verify">Verify your account</string>
    <string name="subtitle_otp">Enter the 4-digit code we sent you. It expires in 30 seconds.</string>
    <string name="label_otp">Verification Code</string>
    <string name="hint_otp">0000</string>
    <string name="btn_verify">Verify</string>
    <string name="verifying">Verifying…</string>
    <string name="verified">Account verified!</string>
    <string name="no_code">Didn\'t get a code?</string>
    <string name="resend">Resend</string>
    <string name="error_otp_length">Please enter the 4-digit code.</string>

    <!-- %1$s and %1$d are placeholders that Java fills in with getString() -->
    <string name="demo_code">Your code: %1$s</string>
    <string name="timer_expires">Code expires in %1$d seconds</string>
    <string name="timer_expired">Code expired. Tap Resend for a new one.</string>

    <string name="label_first_name">First Name</string>
    <string name="hint_first_name">Enter your first name</string>
    <string name="label_last_name">Last Name</string>
    <string name="hint_last_name">Enter your last name</string>

    <string name="creating_account">Creating account…</string>
    <string name="error_fill_all">Please fill in all fields.</string>
    <string name="error_terms">Please agree to the Terms &amp; Privacy Policy.</string>
</resources>